# Rashamon-Arc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/ipc/: Cargo.toml
crates/ipc/src/: channel.rs  lib.rs  protocol.rs  shmem.rs
crates/net/: Cargo.toml
crates/net/src/: adblock.rs  http_client.rs  lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: engine.rs  engine_trait.rs  framebuffer.rs  lib.rs  servo_embedder.rs  servo_host.rs  webkit_engine.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: capabilities.rs  lib.rs  seccomp.rs
crates/ui/: Cargo.toml
crates/ui/src/: display.rs  draw.rs  font.rs  input.rs  layout.rs  main.rs  omnibox.rs  page.rs  persist.rs  theme.rs  ui_state.rs
crates/ui/src/display/: drm_display.rs  ppm_output.rs  sdl_display.rs
