[package]
name = "rashamon-renderer"
version.workspace = true
edition.workspace = true

[features]
# WebKitGTK engine — real rendering.  Requires libwebkit2gtk-4.1-dev.
# Enabled by default on systems that have it installed.
# Disable with: --no-default-features
default = ["webkit"]
webkit = ["dep:webkit2gtk", "dep:gtk", "dep:glib", "dep:gio", "dep:cairo-rs"]

# Servo integration — requires building SpiderMonkey C++ (~45 min first build).
# System deps: libssl-dev pkg-config python3 libfontconfig1-dev
# Build: cargo build --release --package rashamon-ui --features rashamon-renderer/servo
servo = [
    "dep:servo",
    "dep:dpi",
    "dep:url",
]

[dependencies]
rashamon-ipc.workspace = true
rashamon-sandbox.workspace = true
memmap2.workspace = true
libc = "0.2"

# WebKitGTK — real web rendering engine (webkit feature)
webkit2gtk = { version = "2.0", features = ["v2_40"], optional = true }
gtk        = { version = "0.18", optional = true }
glib       = { version = "0.18", optional = true }
gio        = { version = "0.18", optional = true }
cairo-rs   = { version = "0.18", optional = true }

# Servo — real rendering engine (servo feature, ~45 min first build)
# No media-gstreamer to avoid GStreamer system dependency.
# No js_jit to allow building without JIT (slower but simpler).
servo          = { version = "0.1.0", default-features = false, features = ["baked-in-resources"], optional = true }
dpi            = { version = "0.1", optional = true }
url            = { version = "2", optional = true }
