[package]
name = "rashamon-ui"
version.workspace = true
edition.workspace = true

[dependencies]
rashamon-ipc.workspace = true
rashamon-renderer.workspace = true
rashamon-net.workspace = true
memmap2.workspace = true
libc = "0.2"
drm-fourcc = "2"
sdl2 = "0.35"

[[bin]]
name = "rashamon-ui"
path = "src/main.rs"
